# internal/metering/adapters/http/usage/routes.go
@@ -3,13 +3,18 @@ package usage
 import "github.com/go-chi/chi/v5"
 
 func (h *Handler) RegisterRoutes(router chi.Router) {
+	router.Post("/exports", h.CreateExportJob)
 	router.Post("/usages", h.Create)
 	router.Post("/usages/bulk", h.CreateBulk)
 	router.Post("/usages/breakdowns/search", h.SearchBreakdown)
+	router.Post("/usages/export", h.ExportSearch)
 	router.Post("/usages/search", h.Search)
 	router.Post("/usageevents/prune", h.PruneEvents)
+	router.Post("/usageevents/export", h.ExportEventsSearch)
 	router.Post("/usageevents/search", h.SearchEvents)
 	router.Get("/usages/dimensions", h.ListDimensionValues)
+	router.Get("/exports", h.ListExportJobs)
+	router.Get("/exports/{id}", h.GetExportJob)
 	router.Get("/usages", h.List)
 	router.Get("/usages/export", h.Export)
 	router.Get("/usageingestions", h.ListIngestions)
